src/parser/snapshots/monkey_language_server__parser__test__return_unhappy_4.snap
---
source: src/parser/test.rs
description: return x y;
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected ';' not found."), (0,9)->(0,10)),
]

===================================

return x y;
         ^ SyntaxError: Expected ';' not found.
